root/Kubernetes/kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: NAMESPACE
  name: NAME
  labels:
    app: NAME
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "*.HOST.COM"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: NAME
                port:
                  number: 80
